# libwirepump

./: .gitmodules  CMakeLists.txt  README.md
bundler/: CMakeLists.txt  main.cpp
cmake/: asio.cmake  cista.cmake
include/: wirepump.hpp
include/wirepump/: impl.hpp  serialized.hpp  traits.hpp  types.hpp
include/wirepump/adapters/: asio.hpp  readable.hpp  stream.hpp  writable.hpp
include/wirepump/adapters/coroutines/: sync_void_awaitable.hpp
include/wirepump/coroutines/: result_holder.hpp  sync_task.hpp
include/wirepump/traits/: byte.hpp  char.hpp  enum.hpp  floating_point.hpp  signed_integers.hpp  string.hpp  string_view.hpp  to_tuple.hpp  trait.hpp  tuple.hpp  unsigned_integers.hpp  variant.hpp  vector.hpp
include/wirepump/types/: bool.hpp  byte.hpp  char.hpp  enum.hpp  floating_point.hpp  optional.hpp  signed_integers.hpp  string.hpp  string_c.hpp  string_view.hpp  to_tuple.hpp  traits.hpp  tuple.hpp  unsigned_integers.hpp  variant.hpp  vector.hpp
tests/: CMakeLists.txt  adapter.cpp  asio.cpp  bool.cpp  byte.cpp  demo.cpp  demo_asio.cpp  enum.cpp  floating_point.cpp  integers.cpp  optional.cpp  string.cpp  test_utils.hpp  tuple.cpp  variant.cpp  vector.cpp
